tests/E2E/_fixtures/parse_error/Services/CartService.php
<?php
declare(strict_types=1);

namespace App\Services;

use ContainerAwareInterface;

class Cart Service implements ContainerAwareInterface
{
}
